test/Fail/Issue3409.agda

data Empty : Set where
{-# COMPILE GHC Empty = data Bool () #-}
